--- a/WEB/wwwroot/css/site.css
+++ b/WEB/wwwroot/css/site.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: "Lato";
+    src: url('698242188-Lato-Bla.eot');
+    src: url('698242188-Lato-Bla.eot?#iefix') format('embedded-opentype'), url('698242188-Lato-Bla.svg#Lato Black') format('svg'), url('698242188-Lato-Bla.woff') format('woff'), url('698242188-Lato-Bla.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 html {
   font-size: 14px;
 }
@@ -18,5 +26,6 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    font-family: 'Lato', sans-serif;
+    margin-bottom: 60px;
 }
