--- a/WEB/Views/Shared/_Layout.cshtml
+++ b/WEB/Views/Shared/_Layout.cshtml
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="~/WEB.styles.css" asp-append-version="true" />
 </head>
 <body>
+    <!-- Preloader -->
+    <div id="preloader"></div>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
