--- a/WEB/Views/Shared/_Layout.cshtml
+++ b/WEB/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
         <div class="container-fluid justify-content-around">
             <a class="nav-link" href="@Url.Action("Index", "Home")"><i class="fas fa-home"></i><span>Home</span></a>
             <a class="nav-link" href="@Url.Action("About", "Home")"><i class="fas fa-info-circle"></i><span>About</span></a>
-            <a class="nav-link" href="@Url.Action("Contact", "Home")"><i class="fas fa-envelope"></i><span>Contact</span></a>
+            <a class="nav-link" href="@Url.Action("RegisterPlate", "Home")"><i class="fas fa-car"></i><span>Register Plate</span></a>
             <a class="nav-link" href="@Url.Action("Privacy", "Home")"><i class="fas fa-user-secret"></i><span>Privacy</span></a>
         </div>
     </nav>
