Cleaner styling, added 5th button

--- a/WEB/Views/Shared/_Layout.cshtml
+++ b/WEB/Views/Shared/_Layout.cshtml
@@ -27,17 +27,16 @@
     <!-- Bottom Navigation Bar -->
     <nav class="navbar fixed-bottom navbar-light bg-light border-top">
         <div class="container-fluid justify-content-around">
-            <a class="nav-link" href="@Url.Action("Index", "Home")"><i class="fas fa-home"></i><span>Home</span></a>
-            <a class="nav-link" href="@Url.Action("About", "Home")"><i class="fas fa-info-circle"></i><span>About</span></a>
-            <a class="nav-link" href="@Url.Action("RegisterPlate", "Home")"><i class="fas fa-car"></i><span>Register Plate</span></a>
-            <a class="nav-link" href="@Url.Action("Privacy", "Home")"><i class="fas fa-user-secret"></i><span>Privacy</span></a>
+            <a class="nav-link" href="@Url.Action("Index", "Home")"><i class="fas fa-home"></i><span></span></a>
+            <a class="nav-link" href="@Url.Action("About", "Home")"><i class="fas fa-info-circle"></i><span></span></a>
+            <a class="nav-link" href="@Url.Action("RegisterPlate", "Home")"><i class="fas fa-car"></i><span> </span></a>
+            <a class="nav-link" href="@Url.Action("Privacy", "Home")"><i class="fas fa-user-secret"></i><span> </span></a>
+            <a class="nav-link" href="@Url.Action("About", "Home")"><i class="fas fa-regular fa-user"></i><span> </span></a>
         </div>
     </nav>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - WEB - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+        
     </footer>
 
     <!-- Scripts -->
