Simple reg car plate added, more small styling improvements

--- a/WEB/Views/Shared/_Layout.cshtml
+++ b/WEB/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
             <a class="nav-link" href="@Url.Action("Index", "Home")"><i class="fas fa-home"></i><span></span></a>
             <a class="nav-link" href="@Url.Action("About", "Home")"><i class="fas fa-info-circle"></i><span></span></a>
             <a class="nav-link" href="@Url.Action("RegisterPlate", "Home")"><i class="fas fa-car"></i><span> </span></a>
-            <a class="nav-link" href="@Url.Action("Privacy", "Home")"><i class="fas fa-user-secret"></i><span> </span></a>
+            <a class="nav-link" href="@Url.Action("Payment", "Home")"><i class="fas fa-regular fa-credit-card"></i><span> </span></a>
             <a class="nav-link" href="@Url.Action("About", "Home")"><i class="fas fa-regular fa-user"></i><span> </span></a>
         </div>
     </nav>
