--- a/WEB/Views/Home/RegisterPlate.cshtml
+++ b/WEB/Views/Home/RegisterPlate.cshtml
@@ -1,6 +1,15 @@
-﻿@{
-    ViewData["Title"] = "Register your place";
-}
-<h1>@ViewData["Title"]</h1>
+﻿<link rel="stylesheet" type="text/css" href="~/css/regplate.css" />
 
-<p>Use this page to register your licenceplate.</p>
+@{
+    ViewData["Title"] = "Register your plate";
+}
+
+
+<div class="license-plate-form">
+    <h2>Register your license plate</h2>
+    <p>Please enter your license plate below:</p>
+    <form>
+        <input type="text" id="licensePlate" name="licensePlate" placeholder="Enter License Plate Number" required>
+        <button type="submit">Submit</button>
+    </form>
+</div>
