Navbar: text color Loader: background color and gif size.

--- a/WEB/wwwroot/css/navbar.css
+++ b/WEB/wwwroot/css/navbar.css
@@ -3,7 +3,7 @@
 }
 
 .navbar .nav-link {
-    color: #F2F619 !important; /* Kleur van de iconen en tekst */
+    color: #FFFFFF !important; /* Kleur van de iconen en tekst */
     font-size: 1.5rem;
 }
 
