--- a/WEB/wwwroot/css/loaders.css
+++ b/WEB/wwwroot/css/loaders.css
@@ -1,9 +1,10 @@
 #preloader {
     display: none;
-    background-color: #000;
+    background-color: #FFFFFF;
     background-image: url('images/PreloaderIMG.gif');
     background-repeat: no-repeat;
     background-position: center center;
+    background-size: 200px 200px; /* Pas dit aan naar gewenste grootte */
     height: 100vh;
     width: 100%;
     position: fixed;
