--- a/WEB/Views/Shared/_Layout.cshtml
+++ b/WEB/Views/Shared/_Layout.cshtml
@@ -26,14 +26,32 @@
 
     <!-- Bottom Navigation Bar -->
     <nav class="navbar fixed-bottom navbar-light bg-light border-top">
-        <div class="container-fluid justify-content-around">
-            <a class="nav-link" href="@Url.Action("Index", "Home")"><i class="fas fa-home"></i><span></span></a>
-            <a class="nav-link" href="@Url.Action("About", "Home")"><i class="fas fa-info-circle"></i><span></span></a>
-            <a class="nav-link" href="@Url.Action("RegisterPlate", "Home")"><i class="fas fa-car"></i><span> </span></a>
-            <a class="nav-link" href="@Url.Action("Payment", "Home")"><i class="fas fa-regular fa-credit-card"></i><span> </span></a>
-            <a class="nav-link" href="@Url.Action("About", "Home")"><i class="fas fa-regular fa-user"></i><span> </span></a>
-        </div>
-    </nav>
+    <div class="container-fluid justify-content-around">
+        <a class="nav-link" href="@Url.Action("Index", "Home")"><i class="fas fa-home"></i></a>
+        <a class="nav-link" href="@Url.Action("About", "Home")"><i class="fas fa-info-circle"></i></a>
+        <a class="nav-link" href="@Url.Action("RegisterPlate", "Home")"><i class="fas fa-car"></i></a>
+        <a class="nav-link" href="@Url.Action("Payment", "Home")"><i class="fas fa-regular fa-credit-card"></i></a>
+        @if (User.Identity.IsAuthenticated)
+        {
+            // Hier nemen we aan dat de profielfoto URL beschikbaar is als een claim
+            var profilePictureUrl = User.Claims.FirstOrDefault(c => c.Type == "picture")?.Value;
+            if (!string.IsNullOrEmpty(profilePictureUrl))
+            {
+                <a class="nav-link" href="@Url.Action("About", "Home")"><img src="@profilePictureUrl" alt="Profile" style="height: 24px; width: 24px; border-radius: 50%;" /></a>
+            }
+            else
+            {
+                // Backup in geval er geen profielfoto URL beschikbaar is
+                <a class="nav-link" href="@Url.Action("About", "Home")"><i class="fas fa-user"></i></a>
+            }
+        }
+        else
+        {
+            <a class="nav-link" href="@Url.Action("Login", "Account")"><i class="fas fa-sign-in-alt"></i> Login</a>
+        }
+    </div>
+</nav>
+
 
     <footer class="border-top footer text-muted">
         
