--- a/WEB/wwwroot/css/site.css
+++ b/WEB/wwwroot/css/site.css
@@ -25,6 +25,13 @@ html {
   min-height: 100%;
 }
 
+.profile-photo {
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    border: 2px solid white;
+}
+
 body {
     font-family: 'Lato', sans-serif;
     margin-bottom: 60px;
