--- a/WEB/Views/Shared/_Layout.cshtml
+++ b/WEB/Views/Shared/_Layout.cshtml
@@ -49,13 +49,13 @@
             }
             else
             {
+                // Het icoon zonder "Login" tekst
                 <a class="nav-link" href="@Url.Action("Login", "Account")">
-                    <i class="fas fa-sign-in-alt"></i> Login
+                    <i class="fas fa-user"></i>
                 </a>
             }
         </div>
     </nav>
-
 
 
     <footer class="border-top footer text-muted">
