--- a/WEB/Views/Home/RegisterPlate.cshtml
+++ b/WEB/Views/Home/RegisterPlate.cshtml
@@ -3,13 +3,14 @@
 @{
     ViewData["Title"] = "Register your plate";
 }
-
-
+<div class="container">
+    <h1>Update Your Car Registry</h1>
 <div class="license-plate-form">
     <h2>Register your license plate</h2>
     <p>Please enter your license plate below:</p>
     <form>
-        <input type="text" id="licensePlate" name="licensePlate" placeholder="Enter License Plate Number" required>
+        <input type="text" id="licensePlate" name="licensePlate" placeholder="Enter License Plate" required>
         <button type="submit">Submit</button>
     </form>
+</div>
 </div>
