--- a/WEB/Views/Shared/_Layout.cshtml
+++ b/WEB/Views/Shared/_Layout.cshtml
@@ -6,12 +6,13 @@
     <title>@ViewData["Title"] - WEB</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <!-- FontAwesome (voor iconen in bottom navigation) -->
+    <!-- FontAwesome (for icons in bottom navigation) -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-    <!-- Jouw eigen CSS bestanden -->
+    <!-- Your own CSS files -->
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/loaders.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/account.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WEB.styles.css" asp-append-version="true" />
 </head>
 <body>
@@ -19,7 +20,8 @@
     <div id="preloader"></div>
 
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-3 main-content">
+            <!-- Added class for padding -->
             @RenderBody()
         </main>
     </div>
@@ -49,7 +51,7 @@
             }
             else
             {
-                // Het icoon zonder "Login" tekst
+                // The icon without "Login" text
                 <a class="nav-link" href="@Url.Action("Login", "Account")">
                     <i class="fas fa-user"></i>
                 </a>
@@ -57,9 +59,8 @@
         </div>
     </nav>
 
-
     <footer class="border-top footer text-muted">
-        
+        <!-- Footer content here -->
     </footer>
 
     <!-- Scripts -->
