Simple reserve page start

--- a/WEB/Views/Home/Index.cshtml
+++ b/WEB/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Temp landing page</a>.</p>
+    <h1 class="display-4">Welcome to ePark</h1>
+    <p>This page will be used for the main function</a>.</p>
 </div>
 
 
