--- a/WEB/Views/Shared/_Layout.cshtml
+++ b/WEB/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
     <nav class="navbar fixed-bottom navbar-light bg-light border-top">
         <div class="container-fluid justify-content-around">
             <a class="nav-link" href="@Url.Action("Index", "Home")"><i class="fas fa-home"></i></a>
-            <a class="nav-link" href="@Url.Action("About", "Home")"><i class="fas fa-info-circle"></i></a>
+            <a class="nav-link" href="@Url.Action("Reserve", "Home")"><i class="fas fa-solid fa-calendar"></i></a>
             <a class="nav-link" href="@Url.Action("RegisterPlate", "Home")"><i class="fas fa-car"></i></a>
             <a class="nav-link" href="@Url.Action("Payment", "Home")"><i class="fas fa-regular fa-credit-card"></i></a>
             @if (User.Identity.IsAuthenticated)
