--- a/WEB/Views/Home/Index.cshtml
+++ b/WEB/Views/Home/Index.cshtml
@@ -2,45 +2,7 @@
     ViewData["Title"] = "ePark Home";
 }
 
-<div class="text-center mt-4">
-    <h1 class="display-4">Welcome to ePark!</h1>
-    <p>Your smart solution for hassle-free parking.</p>
-</div>
-
-<div id="map" style="height: 400px; width: 100%; margin-top: 20px;"></div>
-
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-md-6">
-            <h2>How It Works</h2>
-            <p>Learn how ePark can make parking easier for you. From finding a spot to making payments, see how our platform streamlines the entire process.</p>
-            <p><a class="btn btn-primary" href="#" role="button">Learn More »</a></p>
-        </div>
-        <div class="col-md-6">
-            <h2>Latest News</h2>
-            <p>Stay updated with the latest developments at ePark and the automotive industry.</p>
-            <p><a class="btn btn-primary" href="#" role="button">Read News »</a></p>
-        </div>
-    </div>
-    <div class="row mt-4">
-        <div class="col-md-6">
-            <h2>User Reviews</h2>
-            <p>Read what our users are saying about their experiences with ePark.</p>
-            <p><a class="btn btn-primary" href="#" role="button">View Reviews »</a></p>
-        </div>
-        <div class="col-md-6">
-            <h2>Contact Us</h2>
-            <p>Have questions? Our team is here to help you!</p>
-            <p><a class="btn btn-primary" href="#" role="button">Get in Touch »</a></p>
-        </div>
-    </div>
-</div>
-
-<footer class="footer mt-5 py-3 bg-light">
-    <div class="container text-center">
-        <span class="text-muted">© 2023 ePark. All rights reserved.</span>
-    </div>
-</footer>
+<div id="map" style="height: 100%; width: 100%; position: absolute;"></div>
 
 @section Scripts {
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
@@ -48,9 +10,9 @@
         function initMap() {
             var map = new google.maps.Map(document.getElementById('map'), {
                 zoom: 12,
-                center: { lat: 52.370216, lng: 4.895168 }  // Update this with your location
+                center: { lat: 52.370216, lng: 4.895168 }  // Pas dit aan naar je locatie
             });
-            // Add markers based on the reserved parking spots data
+            // Voeg hier markers toe gebaseerd op gereserveerde parkeerplaats data indien nodig
         }
     </script>
 }
