--- a/WEB/Views/Shared/_Layout.cshtml
+++ b/WEB/Views/Shared/_Layout.cshtml
@@ -20,7 +20,15 @@
 </head>
 <body>
     <!-- Preloader -->
-    <div id="preloader"></div>
+    <div id="preloader">
+        <div class="welcome-page">
+            <img src="~/css/images/logo.jpg" alt="ePark Logo" class="logo">
+            <div class="loading-container">
+                <img src="~/css/images/Animation.gif" alt="Loading..." class="loading-gif">
+            </div>
+        </div>
+    </div>
+
 
     <div class="container">
         <main role="main" class="pb-3 main-content">
