--- a/WEB/Views/Home/Welcome.cshtml
+++ b/WEB/Views/Home/Welcome.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="welcome-page">
+    <img src="~/css/images/logo.jpg" alt="ePark Logo" class="logo">
     <div class="welcome-content text-center">
         <h1>Welcome to ePark</h1>
         <p>Please click the button below to login and start using the application.</p>
