--- a/WEB/wwwroot/css/index.css
+++ b/WEB/wwwroot/css/index.css
@@ -1,64 +1,31 @@
-﻿/* Algemene stijlen voor de pagina */
-html, body {
+﻿html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden; /* Voorkomt scrollen op de pagina */
     font-family: 'Arial', sans-serif;
-    color: #333;
     background-color: #f4f4f4;
-    box-sizing: border-box; /* Zorgt ervoor dat padding en border in de breedte en hoogte worden opgenomen */
 }
 
-/* Stijlen voor tekst en containers */
-.text-center {
-    text-align: center;
-    margin-top: 20px; /* Consistente margin-top voor elementen met deze klasse */
-}
-
-.container {
-    max-width: 960px;
-    margin: auto; /* Centreert de container horizontaal */
-    padding: 0 20px; /* Voegt padding toe voor wat ademruimte rond content */
-}
-
-/* Knoppen en links */
-.btn-primary {
-    color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
-    padding: 10px 15px; /* Standaard padding voor betere leesbaarheid */
-    border-radius: 5px; /* Afgeronde hoeken voor een modernere look */
-    text-align: center;
-    text-decoration: none; /* Verwijdert onderstreping van links */
-    display: inline-block; /* Zorgt dat de knop correct line-up met andere elementen */
-    cursor: pointer; /* Verandert cursor naar pointer bij hover */
-    transition: background-color 0.3s, border-color 0.3s; /* Gladde transitie voor hover effecten */
-}
-
-    .btn-primary:hover {
-        background-color: #0056b3;
-        border-color: #004085;
-    }
-
-/* Footer */
-.footer {
-    background-color: #e9ecef;
-    color: #767676;
-    padding: 10px 0;
-    text-align: center;
-    position: fixed;
-    left: 0;
-    bottom: 0;
+#map-container {
     width: 100%;
-    border-top: 1px solid #ddd; /* Voegt een scheidingslijn toe boven de footer voor duidelijke afbakening */
+    height: 50vh; /* Hoogte van de kaart ingesteld op 50% van de viewport hoogte */
 }
-
 
 #map {
-    position: absolute; /* Maakt de map flexibel in positie */
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0; /* Zorgt ervoor dat de kaart zich uitstrekt tot de randen van de viewport */
+    width: 100%;
+    height: 100%;
+}
+
+.reserved-parking {
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    text-align: center;
+}
+
+.parking-spot {
+    margin-top: 20px;
+    padding: 20px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+    border-radius: 10px;
 }
