added a way to view payments from database

--- a/WEB/Views/Home/Payment.cshtml
+++ b/WEB/Views/Home/Payment.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@using CORE.Entities
+@model List<Payment>
+
+@{
     ViewData["Title"] = "Check and Pay Outstanding Payments";
 }
 <h1>@ViewData["Title"]</h1>
