--- a/WEB/Views/Home/Reserve.cshtml
+++ b/WEB/Views/Home/Reserve.cshtml
@@ -71,9 +71,9 @@
     <div class="form-group">
         <label for="location">Select Location:</label>
         <select id="location" name="location" class="form-control">
-            <option value="location1">Location 1</option>
-            <option value="location2">Location 2</option>
-            <option value="location3">Location 3</option>
+            <option value="location1">Q-Park de Bijenkorf</option>
+            <option value="location2">Vicky Parkeren Fellenoord</option>
+            <option value="location3">Fontys park</option>
         </select>
 
         <br />
