--- a/WEB/wwwroot/css/payment.css
+++ b/WEB/wwwroot/css/payment.css
@@ -9,16 +9,21 @@ body {
 
 /* Container voor formulieren en lijsten */
 .payment-container, .history-container, .outstanding-payments, .payment-options {
-    background-color: #fff;
-    padding: 20px;
+    
+    padding-left: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 500px;
     margin: 20px auto;
     text-align: left;
 }
 
 /* Lijsten en list-items styling */
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
 ul {
     list-style: none;
     margin: 0;
@@ -128,8 +133,8 @@ li {
         border-color: #004085;
     }
 
-/* Aangepaste stijlen voor de payment-history container */
-.payment-history {
+/* Aangepaste stijlen voor de outstanding-payments container */
+.outstanding-payments {
     background-color: #e9ecef; /* Lichtgrijze achtergrond voor onderscheid */
     padding: 20px;
     border-radius: 8px;
@@ -138,6 +143,18 @@ li {
     margin: 30px auto;
     text-align: left;
     border-left: 5px solid #007bff; /* Blauwe accentlijn aan de linkerkant */
+}
+
+/* Bijgewerkte lijst- en lijstitemstijlen binnen de history-container */
+.payment-history {
+    background-color: #e9ecef; /* Lichtgrijze achtergrond voor onderscheid */
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05); /* Subtielere schaduw */
+    max-width: 600px; /* Een iets breder formaat voor meer ruimte */
+    margin: 30px auto;
+    text-align: left;
+    display: none; /* Hidden by default */
 }
 
 /* Bijgewerkte lijst- en lijstitemstijlen binnen de history-container */
@@ -167,4 +184,27 @@ li {
     .payment-history .btn-primary:hover {
         background-color: #138496;
         border-color: #117a8b;
+    }
+
+.btn-history {
+    display: inline-block;
+    font-weight: 400;
+    color: #fff;
+    text-align: center;
+    vertical-align: middle;
+    user-select: none;
+    background-color: #007bff; 
+    border: 1px solid #007bff;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    margin: 20px; 
+}
+
+    .btn-history:hover {
+        background-color: #007bff;
+        border-color: #007bff;
+        color: fff;
     }
